--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,12 @@
 {"ClassifierArchitecture":[
   {"Model":"InceptionV3",
-   "Classes":["Inclusion"],
-   "WindowSize": [250,250]},
+   "Classes":{"Inclusion":0, "Rest":1},
+   "WindowSize": [250,250],
+   "weights": "/home/tom/FullModel/models/InceptionV3_IncVsAll_NoInc.hdf5"},
   {"Model":"EERACN",
-   "Classes":["Martensite","Interface","Notch","Boundary"],
-   "WindowSize": [50,50]}
+   "Classes":{"Martensite":0,"Interface":1,"Notch":2,"Boundary":3},
+   "WindowSize": [50,50],
+   "weights": "/home/tom/FullModel/models/EERACN_SecondStage.hdf5"}
  ],
  "Classes":["Inclusion","Martensite","Interface","Notch","Boundary"],
  "Training":[
@@ -20,5 +22,8 @@
              "Boundary":115},
      "class_weight": {"0":1,"1":1,"2":1,"3":1}}
  ],
- "TrainingDataFolder": "/home/tom/Data/LabeledDamages/"
+ "TrainingDataFolder": "/home/tom/Data/LabeledDamages/",
+ "Prediction":{
+   "thresholds": [0.7,0.7]
+ }
 }
